@@ -1,5 +1,10 @@
 2008-11-03  Scott Ellington <scott.ellington@gmail.com> 
 
+	* Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs: improvements
+	* Cumberland.Data.SqlServer.Loader/Main.cs: improve
+
+2008-11-03  Scott Ellington <scott.ellington@gmail.com> 
+
 	* cumberland.sln, Cumberland.Data.SqlServer.Loader,
 	  Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs,
 	  Cumberland.Data.SqlServer.Loader/lib,
